# geoviews

./: .appveyor.yml  .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOWTORELEASE.md  Homepage.html  LICENSE  MANIFEST.in  README.md  WINDBARBS_BOKEH_FEATURE.md  about.html  dodo.py  examples  genindex.html  hatch_build.py  index.html  meta.yaml  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  releases.html  search.html  searchindex.js  setup.cfg  setup.py  topics.html  tox.ini
.github/: copilot-instructions.md
.github/workflows/: _test.yaml  build.yaml  docs.yaml  downstream_tests.yaml  nightly_lock.yaml  test.yaml  weekly_test.yaml
_static/: documentation_options.js
conda.recipe/: README.md  Readme.md  build.sh  meta.yaml
conda.recipe/core/: meta.yaml
conda.recipe/recommended/: meta.yaml
developer_guide/: index.html
doc/: Geometries.ipynb  Geometries.rst  Gridded_Datasets_I.ipynb  Gridded_Datasets_I.rst  Gridded_Datasets_II.ipynb  Gridded_Datasets_II.rst  Homepage.ipynb  Introductory_Tutorial.ipynb  Introductory_Tutorial.rst  Iris_Datasets_I.ipynb  Iris_Datasets_I.rst  Iris_Datasets_II.ipynb  Iris_Datasets_II.rst  Makefile  Plotting_with_Bokeh.rst  Projections.ipynb  Projections.rst  Roadmap.rst  Working_with_Bokeh.ipynb  Working_with_Bokeh.rst  Working_with_Iris_Cubes.ipynb  Working_with_Iris_Cubes.rst  about.rst  conf.py  index.rst  latest_news.html  releases.rst  topics.rst
doc/_static/: custom.css
doc/_templates/: footer.html  layout.html
doc/developer_guide/: index.md
doc/governance/project-docs/: CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  MEMBERS.md
doc/reference_manual/: index.rst
doc/user_guide/: Using_Features_Offline.ipynb  Using_Features_Offline.md  Using_WMTS_Offline.ipynb  Using_WMTS_Offline.md  index.rst
examples/: CubeExplorer_Prototype.ipynb  Dashboard_Demo.ipynb  Homepage.ipynb  conftest.py
examples/gallery/bokeh/: airport_graph.ipynb  brexit_choropleth.ipynb  city_populations_2050.ipynb  filled_contours.ipynb  great_circle.ipynb  katrina_track.ipynb  new_york_boroughs.ipynb  orthographic_vectorfield.ipynb  tile_sources.ipynb  trimesh_uk.ipynb  vectorfield_example.ipynb  wind_barbs_example.ipynb  world_population.ipynb  xarray_image.ipynb  xarray_quadmesh.ipynb
examples/gallery/matplotlib/: airport_graph.ipynb  brexit_choropleth.ipynb  city_population.ipynb  (+12 more)
examples/user_guide/: Annotators.ipynb  Geometries.ipynb  Gridded_Datasets_I.ipynb  Gridded_Datasets_II.ipynb  Projections.ipynb  Resampling_Grids.ipynb  Working_with_Bokeh.ipynb  windbarbs_bokeh_example.py
gallery/: index.html
gallery/bokeh/: airport_graph.html  brexit_choropleth.html  city_populations_2050.html  filled_contours.html  great_circle.html  katrina_track.html  new_york_boroughs.html  orthographic_vectorfield.html  tile_sources.html  trimesh_uk.html  vectorfield_example.html  wind_barbs_example.html  world_population.html  xarray_image.html
gallery/matplotlib/: airport_graph.html  brexit_choropleth.html  city_population.html  filled_contours.html  great_circle.html  katrina_track.html  new_york_boroughs.html  orthographic_vectorfield.html  tile_sources.html  trimesh_uk.html  vectorfield_example.html  wind_barbs_example.html  world_population.html  xarray_image.html
geoviews/: .eslintrc.js  __init__.py  __main__.py  __version.py  _warnings.py  annotators.py  editors.py  eslint.config.js  feature.py  index.ts  links.py  operation.py  package-lock.json  package.json  streams.py  tile_sources.py  tsconfig.json  util.py
geoviews/data/: __init__.py  geohash_dict.py  geom_dict.py  geopandas.py  iris.py
geoviews/element/: __init__.py  comparison.py  geo.py  util.py
geoviews/examples/: conftest.py
geoviews/models/: #poly_edit.ts#  __init__.py  checkpoint_tool.ts  clear_tool.ts  custom_tools.py  index.ts  poly_draw.ts  poly_edit.ts  restore_tool.ts  trimesh_layout_provider.ts  wind_barb.py  wind_barb.ts
geoviews/operation/: __init__.py  projection.py  regrid.py  resample.py
geoviews/plotting/: __init__.py  plot.py  util.py
geoviews/tests/: __init__.py  conftest.py  test_conversions.py  test_element.py  test_import.py  test_operation.py  test_projection.py  test_util.py  testconversions.py  testelement.py  testprojection.py
governance/project-docs/: CONTRIBUTING.html  GOVERNANCE.html  LICENSE.html  MEMBERS.html
holocube/: __init__.py
holocube/element/: __init__.py  cube.py  geo.py  util.py
holocube/plotting/: __init__.py
notebooks/: Colocated_cube_pair.ipynb  CubeExplorer_Prototype.ipynb  Dashboard_Demo.ipynb
notebooks/user_guide/: Geometries.ipynb  Geometries.py  Gridded_Datasets_I.ipynb  Gridded_Datasets_I.py  Gridded_Datasets_II.ipynb  Gridded_Datasets_II.py  Gridded_Datasets_II_dyn.py  Projections.ipynb  Projections.py  Resampling_Grids.ipynb  Working_with_Bokeh.ipynb  Working_with_Bokeh.py
reference_manual/: geoviews.annotators.html  geoviews.data.geom_dict.html  geoviews.data.geopandas.html  geoviews.data.html  geoviews.data.iris.html  geoviews.element.comparison.html  geoviews.element.geo.html  geoviews.element.html  geoviews.feature.html  geoviews.html  geoviews.links.html  geoviews.models.custom_tools.html  geoviews.models.html  geoviews.models.wind_barb.html  geoviews.operation.html  geoviews.operation.projection.html  geoviews.operation.regrid.html  geoviews.operation.resample.html  geoviews.plotting.bokeh.callbacks.html  geoviews.plotting.bokeh.chart.html  geoviews.plotting.bokeh.html  geoviews.plotting.bokeh.plot.html  geoviews.plotting.html  geoviews.plotting.mpl.chart.html  geoviews.plotting.mpl.html  geoviews.plotting.plot.html  geoviews.streams.html  geoviews.tile_sources.html  geoviews.util.html  index.html  modules.html
scripts/: check_versions.py  download_data.py  download_data.sh
scripts/conda/: build.sh
tests/: test_cube.py  testconversions.py  testplotting.py
user_guide/: Annotators.html  Resampling_Grids.html  Using_Features_Offline.html  Using_WMTS_Offline.html  Working_with_Bokeh.html  index.html
(+45 files in other folders)
